--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,20 @@
 ---
 - hosts: sonarqube
   remote_user: root
+  become: yes
+  become_method: sudo
   gather_facts: false
   vars_files:
-    - vars/vars.yml
+    - vars/awscredentials.yml
+
   tasks:
+  - name: "Update cache & Full system update"
+    apt:
+     update_cache: true
+     upgrade: dist
+     cache_valid_time: 3600
+     force_apt_get: true
+
   - name: Check for Python
     raw: test -e /usr/bin/python
     changed_when: false
@@ -18,70 +28,44 @@
     when: check_python.rc != 0
 
   - name: Install Python pip
-    apt: name={{ item }} update_cache=true state=present force_apt_get=yes
+    action: apt pkg={{ item }} state=present
     with_items:
      - python3-pip
-    become: true
 
   - name: "install boto3"
     pip:
        name: boto3 
-       executable: pip3
+       executable: pip
 
-  - name: Install package dependencies.
-    package: name={{ item }} state=present
-    with_items:
-     - python3
-     - unzip
 
-  
-  - name: Download the awscli bundle.
-    get_url: url=https://s3.amazonaws.com/aws-cli/awscli-bundle.zip dest=/tmp/awscli-bundle.zip
-    register: aws_cli_download_bundle
-
-  - name: Unarchive the installer.
-    unarchive: src=/tmp/awscli-bundle.zip dest=/tmp copy=no creates=/tmp/awscli-bundle
-    when: aws_cli_download_bundle.changed
-    register: aws_cli_unarchive_installer
-
-  - name: Install awscli package.
-    shell: python3 /tmp/awscli-bundle/install -i /usr/local/aws -b /usr/bin/aws
-    args:
-       creates: /usr/bin/aws
-    when: aws_cli_unarchive_installer.changed
+  - name: AWS | install awscli
+    pip: name=awscli
 
   - name: :AWS | Assures dir exists
     file: path="~/.aws" state=directory
 
   - name: Configure AWS.
     shell: aws configure set {{ item.key }} {{ item.value }} --profile {{ aws_profile }}
-      #no_log:   true
     with_dict:
        aws_access_key_id: "{{ aws_access_key }}"
        aws_secret_access_key: "{{ aws_secret_key }}"
-       region: "{{ aws_default_region }}"
+       aws_default_region: "{{ aws_default_region }}"
        format: "{{ aws_format }}"
     become_user: "{{ aws_system_user }}"
-    changed_when: false
+    changed_when: false   
+ 
+  - name: Create an s3 bucket
+    aws_s3:
+      region: "{{ aws_default_region }}"
+      aws_access_key: "{{ aws_access_key }}"
+      aws_secret_key: "{{ aws_secret_key }}"
+      bucket: "{{ bucket }}"
+      mode: create
+      
 
-  - name: create s3 bucket
-    amazon.aws.s3_bucket:
-       name: jenkins222
-          #state: present
-       region: us-east-1
-       aws_access_key: "{{ aws_access_key }}"
-       aws_secret_key: "{{ aws_secret_key }}"
-  
-  - name: Upload/PUT file to S3 bucket
-    amazon.aws.aws_s3:
-      bucket: jenkins222
-      profile: default
+  - name: Upload backup file to s3
+    aws_s3:
+      bucket: "{{ bucket }}"
+      object: "{{ file }}"
+      src: "{{ path }}"
       mode: put
-      object: "script"
-      src: "/root/script"
-    register: putresult
-
-  - debug: msg="{{ putresult.msg }} and the S3 Object URL is {{putresult.url}}"
-    when: putresult.changed
-
-
